--- a/style.css
+++ b/style.css
@@ -1,13 +1,22 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+
+
 :root{
         font-family: "Alice", serif;
         line-height: 150%;
-        color: #573A37;
+        color: #573A37 ;
        
       
 }
 body {
+    background-color: #573824;
     background-image: url(Assets/bg-image.jpg);
     background-size: cover;
+    
 }
 
 #page {
@@ -16,21 +25,43 @@ body {
     padding: 24px;
     background-color: #F0E8C2;
     border-radius: 24px;
-    margin: 48px auto;
+    margin: 48px auto 28px;
 }
 
 img {
     border-radius: 16px;
 }
+main{
+    padding: 24px;
+}
+
+#about p + p {
+margin-top: 12px;
+margin-bottom: 24px;
+} 
+#about li {
+    margin-left: 24px;
+}
+
 h1{
     line-height: 140%;
     font-size: 40px;
-
+    margin-bottom: 4px;
 }
+
 h2{
     font-size: 24px;  
 }
 h1, h2 {
     color: #291B1A;
-
+    margin-top: 24px;
+    margin-bottom: 4px;
+    line-height: 150%;
+}
+footer {
+    text-align: center;
+    color:#291B1A
+}
+footer img{
+    color: black;
 }
