--- a/style.css
+++ b/style.css
@@ -6,9 +6,10 @@
 
 
 :root{
-        font-family: "Alice", serif;
-        line-height: 150%;
-        color: #573A37 ;
+    border size: border-block: ;;
+    font-family: "Alice", serif;
+    line-height: 150%;
+    color: #573A37 ;
        
       
 }
